# crypto-ai-trader

./: .env.example  .env.prod.sim.example  .env.tencent.prod.example  .gitignore  NEXT_TASK.md  PROJECT_CONTEXT.md  README.md  WORKLOG.md  kol_batch_report.json  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py
docker/: Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: architecture.md  binance_okx_onchainos_split.md  data_dictionary.md  deploy_pluseclould_xyz.md  integration_checklist_v1.md  kol_import_format.md  onchainos_risk_exporter.md  onchainos_signal_exporter.md  release_prep_v1.md  runbook.md  simulation_profile_v1.md  strategy_cards.md  tencent_cloud_deploy_v1.md
scripts/: backtest.py  backtest_kol_cards.py  batch_kol_classify.py  bootstrap_db.py  cancel_pending_positions.py  check_live_binance_setup.py  check_x_connectivity.py  export_onchainos_risks.py  export_onchainos_signals.py  import_kol_posts.py  import_x_export.py  inspect_recent_openings.py  process_kol_pipeline.py  refresh_onchainos_risks.py  release_preflight.py  reset_simulation_runtime.py  run_scheduler.py  runtime_smoke_check.py  twikit_fetch_user_tweets.py  twikit_make_cookies.py
tests/: test_account_api.py  test_ai_analyst.py  test_backtester.py  test_batch_kol_classify.py  test_binance_client.py  test_candidate_diagnostics_api.py  test_dashboard_static.py  test_data_collectors.py  test_execution_engine.py  test_health_api.py  test_kol_pipeline.py  test_notifications.py  test_okx_onchain_integration.py  test_positions_api.py  (+12 more)
(+153 files in other folders)
